<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TaskMan</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Registration</string>
    <string name="login">Log In</string>
    <string name="fullname">Full name</string>
    <string name="email">Email</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="title">Project title</string>
    <string name="description">Description</string>
    <string name="create_project">Create Project</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Log out</string>
    <string name="project_name">Project title:</string>
    <string name="tasks">Tasks:</string>
    <string name="delete">Delete project</string>
    <string name="priority">Priority:</string>
    <string name="add_task">Add task</string>
    <string name="create_task">Create task</string>
</resources>
