<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_height="match_parent"
                 android:layout_width="match_parent"
                 android:layout_gravity="center">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

        <EditText android:id="@+id/username_EditText"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginRight="30dp"
                  android:layout_marginLeft="30dp"
                  android:maxLines="1"
                  android:hint="@string/username"/>

        <EditText android:id="@+id/first_name"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginRight="30dp"
                  android:layout_marginLeft="30dp"
                  android:maxLines="1"
                  android:hint="@string/firstname"/>

        <EditText android:id="@+id/last_name"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginRight="30dp"
                  android:layout_marginLeft="30dp"
                  android:maxLines="1"
                  android:hint="@string/lastname"/>

        <EditText android:id="@+id/email_EditText"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginRight="30dp"
                  android:layout_marginLeft="30dp"
                  android:maxLines="1"
                  android:hint="@string/email"/>


        <EditText android:id="@+id/password_EditText"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginRight="30dp"
                  android:layout_marginLeft="30dp"
                  android:inputType="textPassword"
                  android:maxLines="1"
                  android:hint="@string/password"/>

        <Button android:id="@+id/registration_Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:padding="5dp"/>
    </LinearLayout>





</RelativeLayout>