<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_height="match_parent"
                 android:layout_width="match_parent"
                 android:layout_gravity="center">

    <ImageView android:layout_width="match_parent"
               android:layout_height="match_parent"
            android:background="@drawable/bg"
            android:scaleType="fitXY"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="100dp">

        <EditText android:id="@+id/username_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:maxLines="1"
                android:hint="@string/username"/>

        <EditText android:id="@+id/password_EditText"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginRight="30dp"
                  android:layout_marginLeft="30dp"
                  android:inputType="textPassword"
                  android:maxLines="1"
                  android:hint="@string/password"/>

    </LinearLayout>

   <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_alignParentBottom="true"
           android:layout_marginBottom="10dp"
           android:layout_marginRight="5dp"
           android:layout_marginLeft="5dp">

        <Button android:id="@+id/registration_Button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:padding="5dp"/>

        <Button android:id="@+id/login_Button"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:text="@string/login"
                android:padding="5dp"/>
   </LinearLayout>

</RelativeLayout>